Fixed bug in exercise html template

--- a/scoreboard/templates/scoreboard/exercises.html
+++ b/scoreboard/templates/scoreboard/exercises.html
@@ -20,7 +20,7 @@
 <body>
     {% load render_table from django_tables2 %}
 
-    {% render_table exercises_table %}
+    {% render_table exercise_table %}
 
 </body>
 </html>
