exercise.html now renders exercises in different backgroundcolors

--- a/scoreboard/templates/scoreboard/exercises.html
+++ b/scoreboard/templates/scoreboard/exercises.html
@@ -18,9 +18,24 @@
 
 </head>
 <body>
-    {% load render_table from django_tables2 %}
 
-    {% render_table exercise_table %}
+    {% if exercise_list %}
+
+        {% for exercise in exercise_list %}
+        {% if forloop.counter|divisibleby:2 %}
+            <div style="background-color:#e6e6e6">
+        {% else %}
+            <div style="">
+        {% endif %}
+                {{ exercise.text|safe }}
+            </div>
+        {% endfor %}
+
+    {% else %}
+
+        <p>There are currently no exercises available. Please try again later.</p>
+
+    {% endif %}
 
 </body>
 </html>
